@@ -3,16 +3,16 @@ Hash: SHA256
 
 DIST sanitize-2.0.6.tar.gz 78888 SHA256 ecc0526f231d68dd88efd957145f79841f446ba36124e28c91ef275cc88cafb8 SHA512 e086d6963e8506d498266f0642dd70a9151f38760c1cac69cbba08cde9af291989be48770062dfe824be87f59b21f3d8c125579d9db227f8edea0f93a0993893 WHIRLPOOL 6742f6c06f7b1fc750c76c440e6ed6fd0ee384c6b8afefe0cf064d7c4283e4d877ae9347d7fd392cb1cbfc44798d93d0915059d77aacabf3938ec54ed4491d8e
 DIST sanitize-2.1.0.gem 20992 SHA256 c3be075f5b38a1b02404be5778b181e50fba9ab253bac851cb217d9a71375b77 SHA512 29a26e37342a75af2bc7795578edf2c5064263c58d38dfc36e18f1e111271616c026f7d808a05d63185c12f0e52384db84d62bdb796bf1b21d7e902ef0c1d096 WHIRLPOOL f07c3f7c3550b1e47e3189838a8c1c30c7cd856f237dde167516f25e86520fffe7357f87efd4f2fcf03230650fa55da0ff2d7870746c72c9897318f6dc935cc6
-DIST sanitize-4.0.0.gem 38912 SHA256 56445c9c609e98e855902d0be6c76a687a2987c698f56a983feedd1d8b46676a SHA512 a811cbbf58be81c682b510d0e45aa8c5adf2781fa8001b1b17b5856c859baa6b0fc885bfe26b05d4a61e1889616ec700c5693a761cb7e0df5cab2066224aa874 WHIRLPOOL d9e42c6a3676034f56108d04477de784b0af64c607ed8de28cc264d2ac76c908b23bcbd3542c7d5311f59afb6d76e1d08c93730534a87e96057b3e00a0dfdb58
+DIST sanitize-4.0.0.tar.gz 1345735 SHA256 d97e4016a187a7c3e509d837e917b879494185bfd39c67aded0f188a86b4bd14 SHA512 9505bdcc47f7042e4bb406622a86d82e723a5fc3913444708cd32a77203837a57e331611f6f5e284ddba1fe516d70a3c7949026e794bebbf019a0e8b698dfc80 WHIRLPOOL f2db11647797f5056d7ed975a4db26d725eca396feecb60d762a4cdde9a3d4bfc7a680b4dbb32087aedf8eb43bfe1769211c4b744c0793c6c9bad206fc2d0748
 EBUILD sanitize-2.0.6-r1.ebuild 858 SHA256 8630126db5970a6d40a02fcca0aac7350ea7315b275ca769f4528a68227dc5d7 SHA512 108f9da5fcb0e01bea0c888306f03341efae1dfdfb3535e023b70ce1169b7d844f73503382fd8147e29c7209403e2ee8a1b2fe3471f3948c13bd514f89e2d76d WHIRLPOOL fd13fbd2e864ebde3b58f1bc6da5a40185daee02efaf0d80af45c056221053d7a5c7ee110d290fb73c7763064f04b722088ae13bce1dc89244f87a86168fd64d
 EBUILD sanitize-2.1.0.ebuild 703 SHA256 c8cdade760f1b6c1c1bebbdf27ab0f4cbd437df136039fe361b8925657f53b1b SHA512 38fb2598fbf951ca0f121b305f0573e040fcc0383df91b6fb657d1f8024dae4df1c49cceae10657583c808674b4c8e0192cc96548d568d12cbbab227bb871188 WHIRLPOOL af4a8750bb28e65d3ab5dc940bec04d0672c9de5c37712ca7bd8afb98279e36faea87e75ee2f035ada9d4f992c7fa4ceb0559a07d451fbf97ea967821fde4316
-EBUILD sanitize-4.0.0.ebuild 761 SHA256 b6195f5b2d0881c0ee802adb18c8bd429174f6c4629aeb156de376cb030534e8 SHA512 ea9ae689da32509862064805c15a94fc5baef893ea210d2eeb606e98ba7d1e40585181d28b9af648dc01c698b239c363323c2b22aa74f9f5e502093e9f841fa4 WHIRLPOOL 4774036baf8e3ac1f7c825dc487d5f57f88c76cd24ea6c8bf2fbf1972a1d13094c21aca9ffc9ca591177980c4418dc87f3775e9758e2cb738abe07d430f6e1ce
-MISC ChangeLog 1091 SHA256 e4310b2f47fa46bbb35a81f7279016cee847cf1d693f9420fd1c5019a8df0991 SHA512 c2e3350383bbc5f4d3abbac79184ace093902d826d62e65e8dfa332cecdb0586aebbdf1ae45d8adeb94b5492b87dd095777785955ec65ede99cd30ae74c0d0a2 WHIRLPOOL 1599533f7bb8b021c45b38c4a45ff5ec3fc514e15c8f5a9ed66788a952018ffe9d8f275c5ed805f44e98dadb6727cc21af32529ae45ba25a476f1708cfa58a69
+EBUILD sanitize-4.0.0-r1.ebuild 1008 SHA256 054e7b85bd51fce895e36e8f98c1d0fc806fde891305b8aa99dc1c9602dbd02d SHA512 fe94741d4a2528b6a1ea0895502a77c725f82d68d675c988c3fc75d314b49bec63d867090b42f7396bde7f8996957cbd7dbfaeb0a84462293c6e8eb7543675a9 WHIRLPOOL bf6a4a6e7e7b7d683e36c1a6be78b9034deedbb17701dce584a1c4a130a71ef0d73856ffc7f5dad1c98bb5ce3eb7990dfd0528aa57c2a957458810432fb48fc4
+MISC ChangeLog 1275 SHA256 fa3f68160e16fb53961fb4e89de25ff4877d190b1625d9ff040624e4b54ea9da SHA512 98ff66c77afbf1a81c64c58528785a2dfdd3ab8001ad08c6796388a3c2d1ceb65fb78248f5e75bff8045ab163aade3843f2f3a565dfa24f8ea2dd2a644a8fdde WHIRLPOOL feb1810e67e1bc3d7d9873f4012acca287ebb1203707c1406ae2ad2a370c20d343123d09a7299c8fc7da31da06860a2b3ecedd302f16085755fdf20e6639a5c7
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlVYW88ACgkQiIP6VqMIqNcBMgD/dQplxpt4lZUamW8JpCO5ArLq
-s1+tlwHPDdqBAct0g2gA/0eZVPNHHxDcL66Bt/kVCh2xrX1NNvsFjLIWkbqSkXtN
-=UOGQ
+iF4EAREIAAYFAlVhdfIACgkQiIP6VqMIqNfWTAD/ZsKQPOBy4tkhaW/jsI3y9b68
+MQBqS6AzGnWscvNkb0QA/RTWPmHLil8VJwkoeva3BjDb4LHhSvGU+7rvR/hr/R+A
+=GScu
 -----END PGP SIGNATURE-----
