@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/sanitize
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sanitize/ChangeLog,v 1.6 2015/05/17 09:13:50 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sanitize/ChangeLog,v 1.7 2015/05/24 06:55:45 graaff Exp $
+
+*sanitize-4.0.0-r1 (24 May 2015)
+
+  24 May 2015; Hans de Graaff <graaff@gentoo.org> -sanitize-4.0.0.ebuild,
+  +sanitize-4.0.0-r1.ebuild:
+  Make nokogumbo dependency less restrictive.
 
 *sanitize-4.0.0 (17 May 2015)
 
